--- a/new_version/assets/css/style.css
+++ b/new_version/assets/css/style.css
@@ -4,7 +4,7 @@
   padding-top: 25px;
 } */
 .header {
-  background-image: url(/img/background_header.jpg);
+  background-image: url(/new_version/assets/img/background_header.jpg);
   max-height: 300px;
   height: 100%;
   position: relative;
