--- a/new_version/assets/css/base.css
+++ b/new_version/assets/css/base.css
@@ -58,3 +58,9 @@ body {
   color: rgb(77, 75, 75);
   font-size: 15px;
 }
+.text5 {
+  padding-bottom: 30px;
+  padding-top: 30px;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+}
