--- a/new_version/assets/css/style.css
+++ b/new_version/assets/css/style.css
@@ -72,3 +72,31 @@
 }
 /* language */
 /* tab */
+.checkbox-layout {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  padding: 10px;
+}
+.checkbox-layout,
+.form-check {
+  text-align: left;
+}
+/* .checkbox-layout {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.checkbox_layout-inline {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.checkbox-layout,
+.form-check {
+  min-height: 1.5rem;
+  padding-right: 9rem;
+  margin-bottom: 1.125rem;
+} */
