--- a/new_version/assets/css/animate.css
+++ b/new_version/assets/css/animate.css
@@ -7,3 +7,75 @@
 .nav-link:hover {
   color: red;
 }
+.form-check-input {
+  width: 1.1em;
+  height: 1.1em;
+  margin-top: 0;
+  vertical-align: top;
+  background-color: rgba(143, 142, 142, 0.308);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-print-color-adjust: exact;
+  color-adjust: exact;
+}
+.form-check-input:checked[type="checkbox"] {
+  background-image: url(
+    data:image/svg + xml,
+    %3csvgxmlns="http://www.w3.org/2000/svg"viewBox="0 0 20 20"%3e%3cpathfill="none"stroke="%23fff"stroke-linecap="round"stroke-linejoin="round"stroke-width="3"d="M6 10l3 3l6-6"/%3e%3c/svg%3e
+  );
+}
+.form-check-input:checked {
+  background-color: red;
+  border-color: red;
+}
+.form-check-input[type="checkbox"] {
+  border-radius: 0.25em;
+}
+.form-check-input:focus {
+  border-color: #fe8686;
+  outline: 0;
+  /* box-shadow: 0 0 0 0.25rem rgba(253, 13, 13, 0.25); */
+  box-shadow: none;
+}
+.custom-file {
+  padding-bottom: 30px;
+}
+.text-right {
+  text-align: right;
+}
+.text-left {
+  padding-right: 20%;
+}
+.submitform {
+  background: #434345;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 15px 50px;
+  font-size: 15px;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  border: 0;
+  border-radius: 5px;
+  transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+}
+.submitform:active,
+.submitform:hover {
+  background: #ed213a;
+  color: rgb(255, 255, 255);
+  transition: all 0.5s ease-out 0s;
+  -moz-transition: all 0.5s ease-out 0s;
+  -webkit-transition: all 0.5s ease-out 0s;
+  -o-transition: all 0.5s ease-out 0s;
+}
+.btn:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(253 13 13 / 25%);
+}
