--- a/new_version/assets/css/animate.css
+++ b/new_version/assets/css/animate.css
@@ -79,3 +79,61 @@
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgb(253 13 13 / 25%);
 }
+.file-upload {
+  position: relative;
+  display: block;
+  width: 150px;
+  height: 150px;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+  color: white;
+  text-align: center;
+  line-height: 150px;
+}
+.prepreview {
+  display: none;
+  position: absolute;
+  left: 50%;
+  height: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.file-upload input {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;
+  cursor: pointer;
+}
+div#accordion {
+  padding-bottom: 30px;
+}
+.card-header:first-child {
+  border-radius: none;
+}
+.card-header {
+  padding: 0.5rem 1rem;
+  margin-bottom: 0;
+  background-color: #ed213a;
+  border-bottom: none;
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #ed213a;
+  border: none;
+}
+.card-body {
+  flex: 1 1 auto;
+  padding: 1rem 1rem;
+  color: white;
+}
