--- a/new_version/assets/css/base.css
+++ b/new_version/assets/css/base.css
@@ -2,6 +2,14 @@
 body {
   font-family: "Inter", sans-serif;
 }
+.btn-link {
+  font-weight: inherit;
+  color: inherit;
+  text-decoration: none;
+}
+.btn-link:hover {
+  color: black;
+}
 .gap-row {
   padding-bottom: 20px;
 }
@@ -38,6 +46,16 @@ body {
 .text3 span {
   font-weight: 900;
 }
+.text3_sub {
+  text-align: left;
+  padding-bottom: 5px;
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+  font-weight: 300;
+}
+.text3_sub span {
+  font-weight: 900;
+}
 .text3-out {
   padding-bottom: 5px;
   color: rgb(0, 0, 0);
@@ -49,7 +67,7 @@ body {
 }
 .text4 {
   padding-bottom: 30px;
-  color: rgb(211, 206, 206);
+  color: rgb(241, 236, 236);
   font-size: 15px;
   font-weight: 300;
 }
@@ -62,5 +80,9 @@ body {
   padding-bottom: 30px;
   padding-top: 30px;
   color: rgb(0, 0, 0);
+  font-size: 20px;
+}
+.text5-out {
+  color: rgb(255, 255, 255);
   font-size: 20px;
 }
