--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -136,3 +136,16 @@ div#accordion {
   flex: 1 1 auto;
   padding: 0;
 }
+.modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+  padding: 25px;
+}
