--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -137,15 +137,64 @@ div#accordion {
   padding: 0;
 }
 .modal-content {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   pointer-events: auto;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: none;
   border-radius: 0.3rem;
   outline: 0;
-  padding: 25px;
+  padding-bottom: 25px;
+  top: 381px;
+  transform: translateY(-50%);
+}
+.modal-content-img {
+  padding: 30px 10px 30px 30px;
+}
+.model-content-gradient {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  border: none;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+  background: linear-gradient(-45deg, #c21500, #c28e00, #ffc500, #c21500);
+  background-size: 400% 400%;
+  animation: gradient 4s ease infinite;
+  height: 10vh;
+  color: #fff;
+}
+.cuz-btn {
+  border: none;
+  border-radius: 5px;
+  background: linear-gradient(-45deg, #c21500, #c28e00, #ffc500, #c21500);
+  background-size: 400% 400%;
+  animation: gradient 4s ease infinite;
+  height: 5vh;
+  color: #fff;
+}
+.cuz-btn:hover,
+.cuz-btn:active {
+  border: none;
+  border-radius: 5px;
+  background: #434345;
+  height: 5vh;
+  color: #fff;
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
